--- a/src/style.css
+++ b/src/style.css
@@ -144,15 +144,18 @@ header h1 {
   font-size: 3em;
 }
 
+img {
+  mask-image: radial-gradient(ellipse, #ffffff 80%, #ffffff00 100%);
+}
+
 #content {
   width: 90%;
   max-width: 600px;
-  height: 1000px;
   padding: 2em;
 
   background: #ffffff;
   background: radial-gradient(
-    ellipse at center,
+    ellipse,
     #ffffffcc 0%,
     #ffffff99 50%,
     #ffffff80 75%,
@@ -161,7 +164,7 @@ header h1 {
   );
 
   backdrop-filter: blur(0.3em);
-  box-shadow: 0 0.2em 0.8em rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.2em 0.8em #0000001a;
 }
 
 #content > * {
@@ -181,6 +184,11 @@ header h1 {
   animation-delay: 0.5s;
 }
 
+#about-content {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+}
 
 footer {
   font-size: 0.75rem;
