Update vscode hoping it fixes

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -57,17 +57,17 @@
 }
 
 @font-face {
-  font-family: "3dumbregular";
-  src: url("../assets/fonts/3dumb_regular_macroman/3Dumb-webfont.woff")
-    format("woff");
+  font-family: '3dumbregular';
+  src: url('../assets/fonts/3dumb_regular_macroman/3Dumb-webfont.woff')
+    format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "2dumbregular";
-  src: url("../assets/fonts/2dumb_regular_macroman/2Dumb-webfont.woff")
-    format("woff");
+  font-family: '2dumbregular';
+  src: url('../assets/fonts/2dumb_regular_macroman/2Dumb-webfont.woff')
+    format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -95,11 +95,11 @@ body {
   text-align: center;
   user-select: none;
 
-  background-image: url("../assets/images/background.jpg");
+  background-image: url('../assets/images/background.jpg');
   background-size: cover;
   background-attachment: fixed;
 
-  font-family: "2dumbregular";
+  font-family: '2dumbregular';
   color: var(--color-text);
 }
 
@@ -114,7 +114,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 1.75em;
-  font-family: "3dumbregular";
+  font-family: '3dumbregular';
   font-weight: 700;
   color: var(--color-header);
 }
